--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>CSS</title>
     </head>
     <body>
-        <h1>Inline-css</h1>
+        <h1 style="color: black ; background-color: aqua;">Inline-css.</h1>
+ 
+        
     </body>
 </html>
