--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     </head>
     <body>
         <h1 style="color: black ; background-color: aqua;">Inline-css.</h1>
+
+        <h1 style="color: black ; background-color: aqua;">Inline css is use for short purpose .</h1>
+
+        <h1 style="color: black ; background-color: aqua;">Inline-css is limited to single tag.</h1>
+        
  
         
     </body>
