--- a/doccument.html
+++ b/doccument.html
@@ -9,6 +9,13 @@
     <body>
         <h1 class="p1">Pune</h1>
 
+        <p class="p2">
+            Pune is one of the largest IT hubs in India.
+            It is also one of the most important automobile and manufacturing hubs of
+            India. Pune is often referred to as "Oxford of the East" because of its highly regarded educational institutions.
+            It has been ranked "the most liveable city in India" several times
+        </p>
         
+        <h3 class="p3">Pune is the cultural capital of the Maratha peoples.</h3>
     </body>
 </html>
