add global selector

--- a/doccument.html
+++ b/doccument.html
@@ -3,6 +3,10 @@
     <head>
         <title>css</title>
         <style>
+
+             *{
+                background-color: black;
+            }
            
             .heading {
                 color: aqua;
