--- a/inline.html
+++ b/inline.html
@@ -9,8 +9,9 @@
         <h1 style="color: black ; background-color: aqua;">Inline css is use for short purpose .</h1>
 
         <h1 style="color: black ; background-color: aqua;">Inline-css is limited to single tag.</h1>
+
+        <h2 style="color: black; background-color: aqua;">am pranju</h2>
         
- 
         
     </body>
 </html>
